@@ -111,6 +111,9 @@
 	Fixed merging directories on copying not asking for overwrite
 	confirmations.  Thanks to aleksejrs.
 
+	Fixed skipping of file move during merging aborting the whole operation.
+	Thanks to aleksejrs.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
